--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=v1
 # Configuración de Base de Datos
 spring.datasource.url=jdbc:mysql://localhost:3306/fores_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Ironmaiden-527
+spring.datasource.password=Root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración de JPA e Hibernate
